--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
+    "@types/jquery": "^3.5.16",
+    "@types/jsdom": "^21.1.1",
+    "axios": "^1.4.0",
+    "jquery": "^3.6.4",
+    "jsdom": "^19.0.0",
     "ts-node": "^10.9.1"
   }
 }
